# AdventOfCode2024

./: .gitignore
day_one/: CMakeLists.txt  compile_commands.json
day_one/.cache/clangd/index/: main.cpp.AC1A5EB925D1D43E.idx
day_one/src/: main.cpp
day_two/: CMakeLists.txt
day_two/src/: main.cpp
